--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "arrowParens": "avoid",
   "useTabs": false,
   "tabWidth": 2,
+  "trailingComma": "es5",
   "semi": true,
-  "singleQuote": false,
-  "trailingComma": "es5"
+  "printWidth": 80
 }
